--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=shopping
+
+# PostgreSQL datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/java_list
+spring.datasource.username=postgres
+spring.datasource.password=1111
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate properties
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
